2006-06-07  Pavel Tsekov  <ptsekov@gmx.net>

	* configure.ac: Revert last commit.

2006-05-29  Roland Illig  <roland.illig@gmx.de>

	* m4/ls-mntd-fs.m4: Updated to serial #21, which fixes the use
	of an undefined variable.

2006-05-21  Roland Illig  <roland.illig@gmx.de>

	* configure.ac: Fixed detection of <sys/statvfs.h>, statvfs()
	and struct statvfs.f_fstypename, so that mc builds on NetBSD 3.0
	again.

2006-04-18  Pavel Tsekov  <ptsekov@gmx.net>

	* acinclude.m4 (AC_GET_FS_INFO): Make it work again - the last
	commit broke it.
	* m4/onceonly.m4: New file.

2006-04-13  Anton Monroe  <akm@meer.net>

	* doc/mc.1.in: Function key documentation update.

2006-03-18  Leonard den Ottolander  <leonard den ottolander nl>

	* acinclude.m4 (AC_GET_FS_INFO): Replace old fileutils code to get
	mount and file system information with m4_includes of the corresponding
	GNU coreutils-5.94 files (ls-mntd-fs.m4 (#20) and fsusage.m4 (#16)).

	* m4/fsusage.m4, m4/ls-mntd-fs.m4: Create.

2006-02-23  Pavel Tsekov  <ptsekov@gmx.net>

	* doc/mc.1.in: Document `fish_directory_timeout'.

2006-02-18  David Martin  <<dmartina@excite.com>

	* doc/es/mc.1.in: Cleanup. Fix key naming.

2006-01-29  Pavel Tsekov  <ptsekov@gmx.net>

	* doc/mc.1.in: Update the documentation to reflect the fact
	that confirmation may be requested when deleting directory
	hotlist entries based on a user configurable setting.

2006-01-29  Julian Mehnle  <julian@mehnle.net>

	* doc/mc.1.in: Document support for VIEWER environment variable.

2005-11-15  Pavel Roskin  <proski@gnu.org>

	* acinclude.m4 (MC_WITH_MCSLANG): Add type tests from S-Lang
	configuration scripts.

2005-11-10  Pavel Roskin  <proski@gnu.org>

	* configure.ac: Catch unexpanded MC_* macros.

	* m4/*.m4: Update to the macros provided by gettext 0.14.3.
	* m4/Makefile.am: Update the list of the *.m4 files.

	* configure.ac: Use AC_GNU_SOURCE, which prevents redefining
	_GNU_SOURCE.  Bump Autoconf version to 2.54, where AC_GNU_SOURCE
	appeared.